# neuro-embedded-robotics-lab

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python.yml
configs/: default.yaml  scenarios.yaml
data/results/: failure_taxonomy.csv  mission_benchmark_matrix.csv  reproducibility_manifest.json  study_records.json  study_summary.json  trajectory_bank.json
demo/live_capture_templates/terminal/: colcon_and_launch_output.txt
demo/sample_live_capture/: ros2_node_list.txt  ros2_topic_list.txt  summary.json  telemetry.csv  tf_tree_stub.txt
docs/: experiment_registry.md  failure_analysis.md  full_stack_repository_spec.md  github_surface_plan.md  live_capture_edition.md  methodology.md  research_overview.md  ros2_control_nav2_protocol.md  ros2_gazebo_stack.md  ros2_migration_plan.md  slam_and_mission_protocol.md
docs/appendix/: reproducibility_notes.md
docs/manuscript/: preprint.md
reports/: dashboard.html
reports/evidence/: index.html
reports/live_capture/: index.html
reports/mission_batches/: batch_summary.json
reports/ros_runs/: summary.json
ros2_ws/src/neuro_nav_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_bringup/behavior_trees/: neuro_mission_through_poses.xml  neuro_nav_to_pose.xml
ros2_ws/src/neuro_nav_bringup/config/: bridge_topics.yaml  nav2_params.yaml  ros2_controllers.yaml
ros2_ws/src/neuro_nav_bringup/launch/: bridge_only.launch.py  experiment.launch.py  mission_stack.launch.py  nav2_only.launch.py  sim.launch.py
ros2_ws/src/neuro_nav_bringup/maps/: neuro_lab_map.pgm  neuro_lab_map.yaml
ros2_ws/src/neuro_nav_bringup/rviz/: neuro_nav.rviz
ros2_ws/src/neuro_nav_bt_plugins/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_bt_plugins/src/: is_dynamic_hazard_high.cpp  mission_timeout_exceeded.cpp  request_local_remap.cpp  switch_to_neuro_controller.cpp
ros2_ws/src/neuro_nav_control/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_control/config/: controller_arbitration.yaml
ros2_ws/src/neuro_nav_description/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_description/urdf/: neurobot.urdf.xacro
ros2_ws/src/neuro_nav_experiments/: package.xml  setup.cfg  setup.py
ros2_ws/src/neuro_nav_experiments/config/: experiment_matrix.yaml
ros2_ws/src/neuro_nav_experiments/launch/: batch_eval.launch.py
ros2_ws/src/neuro_nav_experiments/neuro_nav_experiments/: failure_taxonomy_logger.py  mission_metrics_aggregator.py
ros2_ws/src/neuro_nav_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_gazebo/models/neurobot/: model.config  model.sdf
ros2_ws/src/neuro_nav_gazebo/worlds/: neuro_nav_arena.sdf
ros2_ws/src/neuro_nav_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_msgs/msg/: FailureEvent.msg  MissionPhase.msg  SensorHealth.msg
ros2_ws/src/neuro_nav_msgs/srv/: RequestControllerMode.srv
ros2_ws/src/neuro_nav_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/neuro_nav_nodes/config/: controller.yaml
ros2_ws/src/neuro_nav_nodes/neuro_nav_nodes/: common.py  experiment_logger_node.py  mission_supervisor_node.py  neuro_controller_node.py  sensor_fusion_node.py
ros2_ws/src/neuro_nav_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/neuro_nav_perception/config/: perception.yaml
ros2_ws/src/neuro_nav_perception/neuro_nav_perception/: degradation_injector.py  sensor_health_monitor.py  traversability_estimator.py
ros2_ws/src/neuro_nav_slam/: CMakeLists.txt  package.xml
ros2_ws/src/neuro_nav_slam/config/: cartographer_2d.lua  slam_toolbox_localization.yaml  slam_toolbox_online.yaml
ros2_ws/src/neuro_nav_slam/launch/: cartographer.launch.py  localization.launch.py  slam_online.launch.py
ros2_ws/src/neuro_nav_slam/maps/: baseline_map.pgm  baseline_map.yaml
scripts/: assemble_showcase_board.py  build_dashboard.py  capture_live_demo.sh  collect_runtime_evidence.sh  evaluate_ros_run.py  generate_evidence_boards.py  generate_report_assets.py  run_full_study.py  run_mission_batch.py  run_ros_experiment.sh  validate_ros2_layout.py
src/neuro_nav_lab/: __init__.py
src/neuro_nav_lab/controllers/: baselines.py  neuro_controller.py
src/neuro_nav_lab/envs/: navigation_env.py  worlds.py
src/neuro_nav_lab/evaluation/: runner.py
src/neuro_nav_lab/models/: spiking_memory.py
src/neuro_nav_lab/planners/: astar.py
src/neuro_nav_lab/utils/: geometry.py
tests/: test_core.py
