[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-embedded-navigation-lab"
version = "0.3.0"
description = "Research-grade simulation benchmark for neuro-inspired autonomous navigation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Faizan Ahmed Khan"}]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "Pillow>=10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
