<package format="3">
  <name>neuro_nav_control</name>
  <version>0.2.0</version>
  <description>Controller configs, arbitration parameters, and mode interfaces.</description>
  <maintainer email="faizan@example.com">Faizan Ahmed</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>