<?xml version="1.0"?>
<package format="3">
  <name>neuro_nav_description</name>
  <version>0.3.0</version>
  <description>Robot description assets for the Neuro-Embedded Navigation Lab.</description>
  <maintainer email="faizan@example.com">Faizan Ahmed Khan</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
