<package format="3">
  <name>neuro_nav_experiments</name>
  <version>0.2.0</version>
  <description>Scenario runners, rosbag-first experiment orchestration, and report generation.</description>
  <maintainer email="faizan@example.com">Faizan Ahmed</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>