<package format="3">
  <name>neuro_nav_msgs</name>
  <version>0.2.0</version>
  <description>Custom interfaces for neuro-embedded mission autonomy.</description>
  <maintainer email="faizan@example.com">Faizan Ahmed</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>