<?xml version="1.0"?>
<package format="3">
  <name>neuro_nav_nodes</name>
  <version>0.3.0</version>
  <description>ROS 2 control, fusion, supervision, and logging nodes for the Neuro-Embedded Navigation Lab.</description>
  <maintainer email="faizan@example.com">Faizan Ahmed Khan</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
