<package format="3">
  <name>neuro_nav_perception</name>
  <version>0.2.0</version>
  <description>Perception, sensor health, degradation injection, and traversability proxies.</description>
  <maintainer email="faizan@example.com">Faizan Ahmed</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>neuro_nav_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>